--- a/src/view/ZKBearbeiten.form
+++ b/src/view/ZKBearbeiten.form
@@ -92,10 +92,12 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jSeparator22" min="-2" pref="4" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jLabel124" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtfZKID_ZKBearbeiten" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jbLupeZKID_ZKBearbeiten" alignment="1" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="jLabel124" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jtfZKID_ZKBearbeiten" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
