View Auftrag anlegen Methoden erweitert.

--- a/src/view/AuftragAnlegen.form
+++ b/src/view/AuftragAnlegen.form
@@ -28,7 +28,7 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="AuftragAnlegen" alignment="0" pref="834" max="32767" attributes="0"/>
+          <Component id="AuftragAnlegen" alignment="0" pref="842" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -58,7 +58,7 @@
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   <Component id="jbAbbrechen_aa" min="-2" pref="130" max="-2" attributes="0"/>
                               </Group>
-                              <Component id="Auftragsposition_AuftragAnlegen" alignment="0" min="-2" pref="866" max="-2" attributes="0"/>
+                              <Component id="Auftragsposition_AuftragAnlegen" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="32767" attributes="0"/>
                       </Group>
@@ -355,7 +355,7 @@
                                   <Component id="jbMinus_AuftragAnlegen" alignment="0" min="-2" pref="40" max="-2" attributes="0"/>
                                   <Component id="jbPlus_AuftragAnlegen" alignment="0" min="-2" pref="40" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace max="32767" attributes="0"/>
+                              <EmptySpace pref="15" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -557,7 +557,7 @@
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
               <SubComponents>
-                <Component class="javax.swing.JTable" name="jTable2">
+                <Component class="javax.swing.JTable" name="jTAuftragsposition">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                       <Table columnCount="6" rowCount="200">
@@ -579,6 +579,9 @@
                   <Image iconType="3" name="/view/minus2.png"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbMinus_AuftragAnlegenActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="jbPlus_AuftragAnlegen">
               <Properties>
@@ -586,6 +589,9 @@
                   <Image iconType="3" name="/view/plus2.png"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbPlus_AuftragAnlegenActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
@@ -612,6 +618,9 @@
         <Component class="javax.swing.JFormattedTextField" name="jftfLieferdatum_aa">
         </Component>
         <Component class="javax.swing.JFormattedTextField" name="jftfErfassungsdatum_aa">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jftfErfassungsdatum_aaActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
