Lupeneinbindung und Sprung in die jeweilige Maske

--- a/src/view/ArtikelAnzeige.form
+++ b/src/view/ArtikelAnzeige.form
@@ -230,6 +230,9 @@
               <Image iconType="3" name="/view/lupe.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+          </Events>
         </Component>
         <Container class="javax.swing.JPanel" name="jPanel1">
           <Properties>
