--- a/src/view/ArtikelBearbeiten.form
+++ b/src/view/ArtikelBearbeiten.form
@@ -56,7 +56,7 @@
                           <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
                           <Component id="jtfArtikelID_ArtikelBearbeiten" min="-2" pref="150" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="jbLupe_ArtikelBearbeiten" min="-2" pref="35" max="-2" attributes="0"/>
+                          <Component id="jbLupe_ArtikelBearbeiten" min="-2" pref="130" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
                           <Component id="jbBearbeiten_ArtikelBearbeiten" min="-2" pref="130" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
@@ -88,10 +88,10 @@
                   <Component id="jSeparator8" min="-2" pref="10" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jbLupe_ArtikelBearbeiten" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel5" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
                           <Component id="jtfArtikelID_ArtikelBearbeiten" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                          <Component id="jbLupe_ArtikelBearbeiten" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                       </Group>
                       <Group type="103" alignment="0" groupAlignment="3" attributes="0">
                           <Component id="jbBearbeiten_ArtikelBearbeiten" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
@@ -607,10 +607,14 @@
         </Container>
         <Component class="javax.swing.JButton" name="jbLupe_ArtikelBearbeiten">
           <Properties>
-            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/view/lupe.png"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="16" style="0"/>
             </Property>
+            <Property name="text" type="java.lang.String" value="Suchen"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbLupe_ArtikelBearbeitenActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
