--- a/src/view/AuftragAnlegen.form
+++ b/src/view/AuftragAnlegen.form
@@ -28,7 +28,7 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="AuftragAnlegen" alignment="0" pref="808" max="32767" attributes="0"/>
+          <Component id="AuftragAnlegen" alignment="0" pref="812" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -84,7 +84,7 @@
                                                       <Component id="jtfGesamtwert_AuftragAnlegen" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
                                                   </Group>
                                                   <EmptySpace max="-2" attributes="0"/>
-                                                  <Component id="jbLupeGPlID_AuftragAnlegen" min="-2" pref="35" max="-2" attributes="0"/>
+                                                  <Component id="jbLupeGPID_AuftragAnlegen" min="-2" pref="35" max="-2" attributes="0"/>
                                               </Group>
                                           </Group>
                                           <EmptySpace min="-2" pref="80" max="-2" attributes="0"/>
@@ -136,7 +136,7 @@
                       <Component id="jtfGPID_aa" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                       <Component id="jLabel21" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jftfErfassungsdatum_aa" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
-                      <Component id="jbLupeGPlID_AuftragAnlegen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="jbLupeGPID_AuftragAnlegen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -460,6 +460,9 @@
                   <Image iconType="3" name="/view/lupe.png"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbLupeArtikelID_AuftragAnlegenActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel24">
               <Properties>
@@ -557,12 +560,15 @@
         </Component>
         <Component class="javax.swing.JFormattedTextField" name="jftfErfassungsdatum_aa">
         </Component>
-        <Component class="javax.swing.JButton" name="jbLupeGPlID_AuftragAnlegen">
+        <Component class="javax.swing.JButton" name="jbLupeGPID_AuftragAnlegen">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/view/lupe.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbLupeGPID_AuftragAnlegenActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel123">
           <Properties>
