--- a/src/view/GPID_suchen.form
+++ b/src/view/GPID_suchen.form
@@ -61,7 +61,7 @@
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="jTextField1" min="-2" pref="150" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="jButton1" min="-2" pref="35" max="-2" attributes="0"/>
+                              <Component id="jButton1" min="-2" pref="100" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
@@ -158,9 +158,10 @@
         </Container>
         <Component class="javax.swing.JButton" name="jButton1">
           <Properties>
-            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/view/lupe.png"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="16" style="0"/>
             </Property>
+            <Property name="text" type="java.lang.String" value="Suchen"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="jbUebernehmen_GPIDSuchen">
@@ -170,6 +171,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="&#xdc;bernehmen"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbUebernehmen_GPIDSuchenActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
