--- a/src/view/KundeAnlegen.form
+++ b/src/view/KundeAnlegen.form
@@ -35,7 +35,7 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="KundeAnlegen" alignment="0" pref="692" max="32767" attributes="0"/>
+          <Component id="KundeAnlegen" alignment="0" pref="696" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -244,7 +244,7 @@
                           <Component id="jLabel150" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel151" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="jtfTelefon_KundeAnlegen" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
                           <Component id="jrfTelefax_KundeAnlegen" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
