--- a/src/view/ArtikelAnzeige.form
+++ b/src/view/ArtikelAnzeige.form
@@ -227,7 +227,7 @@
         <Component class="javax.swing.JButton" name="jButton1">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/view/lupe.png"/>
+              <Image iconType="3" name="/view/lupe2.png"/>
             </Property>
           </Properties>
           <Events>
