--- a/src/view/ArtikelID_suchen.form
+++ b/src/view/ArtikelID_suchen.form
@@ -60,7 +60,7 @@
                                       <Component id="jComboBox1" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
                                       <Component id="jtfSuchkriterium_ArtikelID_suchen" min="-2" pref="150" max="-2" attributes="0"/>
-                                      <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
+                                      <EmptySpace max="-2" attributes="0"/>
                                       <Component id="jbLupe_ArtikelIDsuchen" min="-2" pref="35" max="-2" attributes="0"/>
                                   </Group>
                                   <Component id="jScrollPane1" alignment="0" min="-2" pref="693" max="-2" attributes="0"/>
@@ -83,7 +83,7 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jComboBox1" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jtfSuchkriterium_ArtikelID_suchen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
-                      <Component id="jbLupe_ArtikelIDsuchen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="jbLupe_ArtikelIDsuchen" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
                   <Component id="jScrollPane1" min="-2" max="-2" attributes="0"/>
