--- a/src/view/AuftragAnzeigen.form
+++ b/src/view/AuftragAnzeigen.form
@@ -526,7 +526,7 @@
         <Component class="javax.swing.JButton" name="jbLupeAuftragsID_AuftragAnzeigen">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/view/lupe.png"/>
+              <Image iconType="3" name="/view/lupe2.png"/>
             </Property>
           </Properties>
           <Events>
