--- a/src/view/KundeSuchen.form
+++ b/src/view/KundeSuchen.form
@@ -67,8 +67,8 @@
                                       <Component id="jcbSuchkriterium_KundeSuchen" min="-2" pref="150" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Component id="jtfSuchkriterium_KundeSuchen" min="-2" pref="150" max="-2" attributes="0"/>
-                                      <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
-                                      <Component id="jbSuchen_KundeSuchen" min="-2" pref="100" max="-2" attributes="0"/>
+                                      <EmptySpace max="-2" attributes="0"/>
+                                      <Component id="jbSuchen_KundeSuchen" min="-2" pref="35" max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
                                       <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
@@ -94,7 +94,7 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jcbSuchkriterium_KundeSuchen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                       <Component id="jtfSuchkriterium_KundeSuchen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
-                      <Component id="jbSuchen_KundeSuchen" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="jbSuchen_KundeSuchen" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="65" max="-2" attributes="0"/>
                   <Component id="jScrollPane6" min="-2" pref="241" max="-2" attributes="0"/>
@@ -103,7 +103,7 @@
                       <Component id="jbAnzeigen_KundeSuchen" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                       <Component id="jbAbbrechen_KundeSuchen" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="334" max="32767" attributes="0"/>
+                  <EmptySpace pref="339" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -167,7 +167,9 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="16" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Suchen"/>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/view/lupe.png"/>
+            </Property>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="jbAnzeigen_KundeSuchen">
