--- a/src/view/LieferantAnzeigen.form
+++ b/src/view/LieferantAnzeigen.form
@@ -117,7 +117,7 @@
         <Component class="javax.swing.JButton" name="jbLupeGPID_LieferantAnzeigen">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/view/lupe.png"/>
+              <Image iconType="3" name="/view/lupe2.png"/>
             </Property>
           </Properties>
           <Events>
