--- a/src/view/LieferantSuchen.form
+++ b/src/view/LieferantSuchen.form
@@ -67,6 +67,8 @@
                           <Component id="jcbSuchkriterium_LieferantSuchen" min="-2" pref="120" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Component id="jtfSuchkriterium_LieferantSuchen" min="-2" pref="150" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="jButton1" min="-2" pref="35" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
@@ -99,6 +101,7 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jcbSuchkriterium_LieferantSuchen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                       <Component id="jtfSuchkriterium_LieferantSuchen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="jButton1" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="85" max="-2" attributes="0"/>
                   <Component id="jScrollPane7" min="-2" pref="200" max="-2" attributes="0"/>
@@ -200,6 +203,13 @@
             </Component>
           </SubComponents>
         </Container>
+        <Component class="javax.swing.JButton" name="jButton1">
+          <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/view/lupe.png"/>
+            </Property>
+          </Properties>
+        </Component>
       </SubComponents>
     </Container>
   </SubComponents>
