--- a/src/view/ZKAnzeigen.form
+++ b/src/view/ZKAnzeigen.form
@@ -629,7 +629,7 @@
         <Component class="javax.swing.JButton" name="jbLupe_ZKAnzeigen">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/view/lupe.png"/>
+              <Image iconType="3" name="/view/lupe2.png"/>
             </Property>
           </Properties>
           <Events>
