probleme mit der Speicher button auf der Auftrag Bearbeiten View

--- a/src/view/AuftragBearbeiten.form
+++ b/src/view/AuftragBearbeiten.form
@@ -727,6 +727,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Speichern"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbSpeichernAuftragBearbeitenActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
