View Auftrag anlegen Methoden erweitert

--- a/src/view/AuftragBearbeiten.form
+++ b/src/view/AuftragBearbeiten.form
@@ -185,6 +185,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="L&#xf6;schen"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbL&#xf6;schenAuftragBearbeitenActionPerformed"/>
+          </Events>
         </Component>
         <Container class="javax.swing.JPanel" name="jpUnterPanel_AuftragBearbeiten">
           <Properties>
