--- a/src/view/AuftragBearbeiten.form
+++ b/src/view/AuftragBearbeiten.form
@@ -110,7 +110,7 @@
                       <Component id="jbAbbrechen_AuftragBearbeiten" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                       <Component id="jbSpeichernAuftragBearbeiten" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="36" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
